dfir_rs/tests/compile-fail/surface_degenerate_null.stderr
error: Degenerate subgraph detected, is there a disconnected `null()` or other degenerate pipeline somewhere?
 --> tests/compile-fail/surface_degenerate_null.rs:6:9
  |
6 |         null();
  |         ^^^^^^
